Defer pv related JS.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -93,7 +93,7 @@
     <script src="{{ site.baseurl }}/assets/js/dist/timeago.min.js" async></script>
     {% if site.google_analytics.pv %}
       <script src="{{ site.baseurl }}/assets/lib/countUp.min.js" async></script>
-      <script src="{{ site.baseurl }}/assets/js/dist/pageviews.min.js" async></script>
+      <script src="{{ site.baseurl }}/assets/js/dist/pageviews.min.js" defer></script>
     {% endif %}
   {% endif %}
 
