theme: reworked as a dark theme

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -3,7 +3,8 @@
   © 2017-2019 Cotes Chung
   MIT License
 -->
-<div id="topbar" class="bg-white row justify-content-center topbar-down">
+<!-- <div id="topbar" class="bg-white row justify-content-center topbar-down"> -->
+<div id="topbar" class="row justify-content-center topbar-down">
 
   <div id="topbar-main" class="d-flex h-100 align-items-center justify-content-between col-12 col-md-12 col-lg-11 col-xl-11 pl-md-2 pr-md-2 pl-lg-2 pr-lg-2">
 
