--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@ layout: compress
     <div id="sidebar" class="d-flex flex-column">
       {% include sidebar.html %}
     </div>
-    <div id="main-wrap" class="bg-white">
+    <!-- <div id="main-wrap" class="bg-white"> -->
+    <div id="main-wrap">
       {% include topbar.html %}
       <div id="main">
 
