--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -39,7 +39,7 @@
 .post-preview .post-content {
   margin-top: .6rem;
   margin-bottom: .6rem;
-  color: dimgray;
+  // color: dimgray;
 }
 
 /* Make preview shorter in Home page*/
