--- a/assets/css/categories.scss
+++ b/assets/css/categories.scss
@@ -7,6 +7,7 @@
 */
 
 .categories {
+  background-color: rgb(42, 30, 107);
   margin-bottom: 2rem;
 }
 
@@ -16,7 +17,7 @@
 
 .categories .card-header>span>i:first-child,
 .categories .list-group-item>i {
-  color: gray;
+  //color: gray;
 }
 
 .categories .list-group-item {
