added home assistant icon + link to my profile

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -53,16 +53,19 @@
 
 <div class="contact d-flex justify-content-around mt-4">
   <a href="https://github.com/{{ site.github.username }}" target="_blank">
-    <i class="fab fa-github-alt"></i>
+    <i class="mdi mdi-github-face"></i>
   </a>
   <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank">
-    <i class="fab fa-twitter"></i>
+    <i class="mdi mdi-twitter"></i>
+  </a>
+  <a href="https://community.home-assistant.io/u/{{ site.homeassistant.username }}" target="_blank">
+    <i class="mdi mdi-home-assistant" aria-hidden="true"></i>
   </a>
   {% assign email = site.social.email | split: '@' %}
   <a href="javascript:window.open('mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@'))">
-    <i class="fas fa-envelope"></i>
+    <i class="mdi mdi-email"></i>
   </a>
   <a href="{{ site.baseurl }}/feed.xml" target="_blank">
-    <i class="fas fa-rss"></i>
+    <i class="mdi mdi-rss"></i>
   </a>
 </div>
