--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,6 +48,8 @@
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.2/css/all.min.css"
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
     crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/4.7.95/css/materialdesignicons.min.css">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
