--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -537,6 +537,7 @@ h2, h3, h4 {
 }
 
 blockquote {
+  background-color: rgb(42, 30, 107);
   border-left: 5px solid #eee;
   padding-left: 1rem;
   color: #9a9a9a;
