material icons: readding for Home Assistant icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,8 @@
   <link rel="preload" as="style"
     href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha256-LA89z+k9fjgMKQ/kq4OO2Mrf8VltYml/VES+Rg0fh20=" crossorigin>
+  
+  <link rel="preload" as="style" href="//cdn.materialdesignicons.com/4.7.95/css/materialdesignicons.min.css" crossorigin>
 
   <link rel="preload" as="style"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.2/css/all.min.css"
